Update sample pom

--- a/README.textile
+++ b/README.textile
@@ -262,7 +262,7 @@ h3. TPD preferences page
 
 h3. Call the generator from the command line
 
-This project provides an Eclipse application that you can launch from the command line. The ID of the application is @fr.obeo.releng.targetplatform.pde.ConverterApplication@ and is provided by the plugin @fr.obeo.releng.targetplatform@. You can use this app in shell scripts, ant or maven build. If you use Tycho, you may have a look at "this example pom.xml file":https://github.com/hmarchadour/fr.obeo.releng.targetplatform/blob/78e0d470f57bfd82ba6fe7e1c09bfeb2fdfb0180/fr.obeo.releng.targetplatform-parent/targetdefinitions/pom.xml
+This project provides an Eclipse application that you can launch from the command line. The ID of the application is @fr.obeo.releng.targetplatform.pde.ConverterApplication@ and is provided by the plugin @fr.obeo.releng.targetplatform@. You can use this app in shell scripts, ant or maven build. If you use Tycho, you may have a look at "this example pom.xml file":https://github.com/jldelarbre/fr.obeo.releng.targetplatform/blob/gh-pages/doc/pom.xml
 
 h4(#envVar). Variable overriding from command line or environment
 
